Update readme with link to site

--- a/README.rdoc
+++ b/README.rdoc
@@ -1,4 +1,4 @@
-Map Time is an interactive data mapping tool that allows you to create visual representation of demographic data as well as download that data in full. 
+Map Time is an interactive data mapping tool that allows you to create visual representation of demographic data as well as download that data in full. View it online at http://map-time.herokuapp.com/ 
 Currently Map Time is soley focused on census tract data for the GTA. We plan to extend this tool for all of Canada. 
 Census tracts (CTs) are small, relatively stable geographic areas that usually have a population between 2,500 and 8,000 persons. They are located in census metropolitan areas and in census agglomerations that had a core population of 50,000 or more in the previous census. 
 The most current Census data is 2011. 
